--- a/TODO
+++ b/TODO
@@ -8,14 +8,14 @@ Version 1.0
 
 - Make FlowIPResolver use a specific callback per lookup again. Signals
   don't work when they can be dispatched in multiple threads and you don't
-  know which request is "yours".
+  know which request is "yours". [DONE]
 
 - Make FlowIPService able to store a name and resolve itself. It must also
   be able to store multiple addresses, so can no longer derive from
-  FlowIPAddr. [IN PROGRESS]
+  FlowIPAddr. [DONE]
 
 - Fix code globally to not do FLOW_IP_ADDR (ip_service), but instead use
-  flow_ip_service_find_address ().
+  flow_ip_service_find_address (). [DONE]
 
 - Implement a name-looker-upper element. Problem is naming: We already
   have FlowIPResolver and it's not an element.
